Correction z-index du header

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,7 +10,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, .15);
   position : sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 header {
@@ -23,8 +23,9 @@ header {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, .15);
   position : sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   position: relative;
+  
   .icon__arrow-left {
     visibility: visible;
     position: absolute;
